--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "openapi-generate": "npx openapi-typescript integrations/backend.json -o integrations/backend.ts",
+    "openapi-transform": "bun run integrations/transform.ts"
   },
   "jest": {
     "preset": "jest-expo"
@@ -40,9 +42,11 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "fuse.js": "^7.1.0",
     "jotai": "^2.12.1",
     "lucide-react-native": "^0.476.0",
     "nativewind": "^4.1.23",
+    "openapi-fetch": "^0.13.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -66,6 +70,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
+    "openapi-typescript": "^7.6.1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
