Displaying vocab translations in the frontend.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_BACKEND_API_URL=http://localhost:3000
+EXPO_UNSTABLE_METRO_OPTIMIZE_GRAPH=1
+EXPO_UNSTABLE_TREE_SHAKING=1
+EXPO_PUBLIC_APP_NAME=Gofulingo
