--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "cross-env EXPO_UNSTABLE_ATLAS=true expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
+    "build:web": "cross-env EXPO_UNSTABLE_ATLAS=true expo export -p web",
     "openapi-generate": "npx openapi-typescript integrations/backend.json -o integrations/backend.ts",
     "openapi-transform": "bun run integrations/transform.ts"
   },
@@ -68,11 +69,13 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "openapi-typescript": "^7.6.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "expo-atlas": "^0.4.0"
   },
   "private": true
 }
