--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/popover": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/toggle": "^1.1.0",
+    "@rn-primitives/toggle-group": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-query": "^5.66.11",
     "axios": "^1.8.1",
@@ -70,12 +72,12 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "cross-env": "^7.0.3",
+    "expo-atlas": "^0.4.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "openapi-typescript": "^7.6.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3",
-    "expo-atlas": "^0.4.0"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
