--- a/frontend/Dockerfile.web
+++ b/frontend/Dockerfile.web
@@ -28,8 +28,15 @@ FROM nginx:alpine
 # Copy the built files from builder stage to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy a custom nginx config if needed
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Create custom nginx config for SPA routing
+RUN echo 'server { \
+    listen 80; \
+    location / { \
+        root /usr/share/nginx/html; \
+        index index.html index.htm; \
+        try_files $uri $uri/ /index.html; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
